--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,10 +1,13 @@
 @import 'reset';
-@import 'slider';
 
 html,
 body {
 	height: 100%;
 	overflow-x: hidden;
+}
+
+body.disable-scroll {
+	overflow-y: hidden;
 }
 
 a {
@@ -72,6 +75,7 @@ a {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	transition: all .8s ease-out;
 }
 
 .btn-1 {
@@ -194,7 +198,7 @@ a {
 	}
 
 	.span {
-		font-size: 16px;
+		font-size: 18px;
 	}
 
 	.btn-1,
@@ -209,5 +213,8 @@ a {
 @media (max-width: 500px) {
 	.container {
 		padding: 0 40px;
+	}
+	.span {
+		font-size: 16px;
 	}
 }
