--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'reset';
+@import 'animations';
 
 html,
 body {
@@ -10,7 +11,8 @@ body.disable-scroll {
 	overflow-y: hidden;
 }
 
-a {
+a,
+button {
 	cursor: pointer;
 }
 
