--- a/assets/styles/_animations.scss
+++ b/assets/styles/_animations.scss
@@ -1,6 +1,6 @@
 @keyframes fadeIn {
     0% {
-        opacity: 0;
+        opacity: 0.2;
     }
 
     100% {
@@ -14,7 +14,7 @@
     }
 
     100% {
-        opacity: 0;
+        opacity: 0.2;
     }
 }
 
@@ -22,6 +22,7 @@
     0% {
         transform: translateX(100vw);
     }
+
     100% {
         transform: translateX(0%);
     }
@@ -31,7 +32,64 @@
     0% {
         transform: translateX(0%);
     }
+
     100% {
         transform: translateX(100vw);
+    }
+}
+
+@keyframes show {
+    0% {
+        transform: scaleY(0.2);
+    }
+
+    100% {
+        transform: scaleY(1);
+    }
+}
+
+@keyframes hide {
+    0% {
+        transform: scaleY(1);
+    }
+
+    100% {
+        transform: scaleY(0);
+    }
+}
+
+@keyframes appearFromLeft {
+    0% {
+        transform: translateX(-100vw);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@keyframes appearFromLeftAndScale {
+    0% {
+        transform: translateX(-100vw);
+        scale: 2;
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0%);
+        scale: 1;
+        opacity: 1;
+    }
+}
+
+@keyframes appearFromBottom {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
     }
 }
