--- a/assets/styles/_animations.scss
+++ b/assets/styles/_animations.scss
@@ -40,11 +40,11 @@
 
 @keyframes show {
     0% {
-        transform: scaleY(0.2);
+        scale: 1 0.2 1;
     }
 
     100% {
-        transform: scaleY(1);
+        scale: 1 1 1;
     }
 }
 
@@ -81,13 +81,25 @@
 @keyframes appearFromLeftAndScale {
     0% {
         transform: translateX(-100vw);
-        scale: 2;
+        scale: 1.5;
         opacity: 0;
     }
 
     100% {
         transform: translateX(0%);
         scale: 1;
+        opacity: 1;
+    }
+}
+
+@keyframes appearFromTop {
+    0% {
+        transform: translateY(-100vh);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0%);
         opacity: 1;
     }
 }
